--- a/server/.env.example
+++ b/server/.env.example
@@ -1,4 +1,36 @@
-MONGO_URI=your_mongodb_connection_string
+# ========================================
+# COSTEO-APP - Variables de Entorno
+# ========================================
+# Copia este archivo como .env y configura tus valores
+
+# ==========================================
+# BASE DE DATOS
+# ==========================================
+MONGO_URI=mongodb+srv://usuario:password@cluster.mongodb.net/costeo-app?retryWrites=true&w=majority
+
+# ==========================================
+# SERVIDOR
+# ==========================================
 PORT=5000
-JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 NODE_ENV=development
+# En producción usar: NODE_ENV=production
+
+# ==========================================
+# JWT AUTHENTICATION (⚠️ CRÍTICO - SEGURIDAD)
+# ==========================================
+# IMPORTANTE: Genera un secret único y fuerte para producción
+# Ejecuta: node -e "console.log(require('crypto').randomBytes(64).toString('hex'))"
+# Nunca uses el valor de ejemplo en producción
+JWT_SECRET=genera-un-secret-de-64-bytes-ejecutando-el-comando-de-arriba
+JWT_EXPIRES_IN=7d
+
+# ==========================================
+# CORS (Solo para producción)
+# ==========================================
+# FRONTEND_URL=https://tu-dominio.com
+
+# ==========================================
+# OPCIONALES
+# ==========================================
+# RATE_LIMIT_WINDOW_MS=600000
+# RATE_LIMIT_MAX=100
