feat: Cambiar nombre del proyecto de CosteoApp a Info chef - Login page - Sidebar - Layout - App.jsx - index.html title - manifest.json

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "Costeo App",
-    "short_name": "Costeo",
+    "name": "Info chef 👨🏻‍🍳",
+    "short_name": "Info chef",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0f172a",
